themes/default/style.css
html, body{
  width: 100%;
  height: 100%;
}
body {
	margin: 0px;
	color: black;
/*
  display: -moz-box;
  display: -webkit-box;
  -moz-box-orient: vertical;
  -webkit-box-orient: vertical;
*/
}
/*
 *header
 */
header {
  color: white;
  background-color: black;
  background: -o-linear-gradient(top, #5A5A5A, #010101);  
  background: -webkit-linear-gradient(top, #5A5A5A, #010101);  
  background: -moz-linear-gradient(top, #5A5A5A, #010101); 
	height: 40px;
  position: fixed;
  width: 100%;
}
/*
#title {
    cursor: pointer;
}
*/
/*
#upload-button, #folder-adder, #account-menu, #nav-button {
  display: none;
}
*/
/*
header > * {
  display: inline;
}
*/
header .center * {
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100%;
  max-height: 100%;
  text-align: center;
}
header .center {
  width: 200px;
  margin-left: auto;
  margin-right: auto;
  display: block;
  text-align: center;
  padding-top: 5px;
}
header .right {
  position: fixed;
  right: 5px;
  top: 5px;
}
header .left {
  position: fixed;
  left: 5px;
  top: 5px;
}
/*
 * Dock
 */
#dock {
  overflow-x: auto;
  overflow-y: hidden;
  position: fixed;
  bottom: 0;
  background-color: grey;
  width: 100%;
}
#dock ul {
  list-style: none;
  display: inline-block;
  margin: 0;
  padding: 0;
}
#dock .thumbnail {
  margin: 0 !important;
  padding: 0 !important;
  max-height: 52px !important;
  max-width: 52px !important;
}
#dock .thumbnail img {
  max-height: 32px !important;
  max-width: 32px !important;
}
.thumbnail.dragenter {
  font-weight: bold;
}

/*
 *section
 */
section {
  background-color: white;
  padding-top: 40px;
}
section#account {
  text-align: center;
}

/*
code {
  white-space: pre;
};
*/

/*
 * viewer
 */
#viewer {
	background-color: black;
  border: none;
}
#preview {
  width: 80%;
  height: 80%;
  margin: auto;
}
#viewer #download {
  color: white;
}
#preview span {
  color: white;
}
#preview iframe {
  border: none;
}
#preview img {
  max-width: 100%;
  max-height: 100%;
}
#preview video {
  height: 80%;
}
/*
 * Uploader
 */
#file-picker {
  visibility: hidden;
  position: fixed;
  height: 0;
  width: 0;
}
#upload-button, #folder-adder, #empty-trash   {
  vertical-align: middle;
  background: -moz-linear-gradient(top, #65b98b, #24794b);
  background: -o-linear-gradient(top, #65b98b, #24794b);
  background: -webkit-linear-gradient(top, #65b98b, #24794b);
  color: white;
  -webkit-border-radius: 6px;
  -moz-border-radius: 6px;
  border: none;
  height: 25px;
  box-shadow: 0 0 0.5em black;
  font-size: 18px;
}
.thumbnail.upload {
  color: #069045;
  font-size: 18px;
  cursor: pointer !important;
}
.thumbnail.upload .miniature {
  border: dashed 2px #069045;
  border-radius: 6px;
  width: 80px;
  height: 80px;
  margin: auto;
}
.thumbnail.upload .text {
  width: 80px;
  height: 80px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 22.5px;
  text-align: center;
}

.panel {
  padding: 0;
  margin: 0;
}

/*
 * Folder adder
 */
#folder-adder input {
  border: none;
  background: none;
  font-size: inherit;
}
.thumbnail, #folder-adder, #upload-button, #empty-trash {
  cursor: pointer !important;
} 
/*
 * Folders
 */
.thumbnail.folder .miniature {
/*
  width: 85px;
*/
}

/*
 * Files
 */
.thumbnail.file img.miniature {
  box-shadow: 0 0 0.5em black;
}
.thumbnail.file progress {
  max-width: inherit;
}

/*
 * Divers
 */
*[hidden] {
	display: none !important;
}
a {
	color: inherit;
	text-decoration: none;
}

/*
 * XMPP Console
 */
#xmpp-console {
  height: 50%;
  width: 100%;
  overflow: auto;
  position: fixed;
  bottom: 0;
  background-color: black;
  color: white;
}

